[package]
name = "snow"
version = "0.1.0"
authors = ["Sam Szuflita <sam.szuflita@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version="0.4.0", default-features=false}
bevy_webgl2 = {version="0.4.0", optional=true}
rand = "0.8.3"
getrandom = {version="0.1", features=["wasm-bindgen"]}

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]

native = [
  "bevy/bevy_wgpu",
]

web = [
  "bevy_webgl2"
]

[profile.dev]
opt-level = 1